# FindYourDate

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Algorithm/: algorithm.py  gs_hung.py  helpers.py  hungarian.py  networkx_matching.py  script.py
Backend/: README.md  alembic.ini  create_tables.py  gender_ratio.py  pyproject.toml  requirements.txt  run_matchmaking.py  test_db_connection.py
Backend/alembic/: env.py
Backend/alembic/versions/: 3fe746b7e3a4_init_schema.py  9f6ba3ff7b0f_initial_schema_with_users_match_history_.py
Backend/app/: main.py
Backend/app/api/: auth.py  chat.py  main.py  round1_results.py  status.py  users.py
Backend/app/core/: llm_questionnaire.py  rate_limiter.py
Backend/app/core/matchmaking/: algorithms.py  helpers.py  person.py  pipeline.py  similarity.py
Backend/app/db/: database.py  qdrant_client.py
Backend/app/models/: __init__.py  chat_session.py  embedding_model.py  match_history.py  match_score.py  question_answer.py  user_model.py
Backend/app/utils/: embeddings.py
Backend/app/utils/helper/: test_embeddings.py
Frontend/: package-lock.json  package.json
Frontend/src/: app.css  app.html
Frontend/src/lib/: api.ts
Frontend/src/lib/components/: FormsClosedPage.svelte  SignOutButton.svelte
Frontend/src/lib/stores/: auth.ts  config.ts
Frontend/src/routes/: +layout.svelte  +page.svelte
Frontend/src/routes/aiChatRoom/: +page.svelte
Frontend/src/routes/auth/: profile-example.svelte
Frontend/static/animations/: heart-happy.riv  heart-hi.riv  heart-sad.riv
(+3 files in other folders)
